--- a/app/src/main/res/layout/activity_okhttp.xml
+++ b/app/src/main/res/layout/activity_okhttp.xml
@@ -14,9 +14,9 @@
         android:text="@string/get_request"/>
 
     <TextView
+        android:id="@+id/getShow"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/getShow"/>
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/postBtn"
@@ -35,4 +35,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/download_request"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cardview_light_background">
+
+        <ImageView
+            android:id="@+id/downloadShow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/imageLoading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"/>
+    </FrameLayout>
+
 </LinearLayout>
