--- a/app/src/main/res/layout/activity_okhttp.xml
+++ b/app/src/main/res/layout/activity_okhttp.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.hongri.okhttpdemo.OkHttpActivity">
@@ -66,5 +68,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/ok_intercept" />
+
+    <Button
+        android:id="@+id/useRetrofit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/use_retrofit" />
 
 </LinearLayout>
