--- a/app/src/main/res/layout/activity_okhttp.xml
+++ b/app/src/main/res/layout/activity_okhttp.xml
@@ -75,4 +75,11 @@
         android:layout_height="wrap_content"
         android:text="@string/use_retrofit" />
 
+    <Button
+        android:id="@+id/retrofitRxJava"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/use_retrofit_rxjava" />
+
+
 </LinearLayout>
